syntax = "proto3";

option java_package = "com.examples.proto.api";
option java_multiple_files = true;
option java_outer_classname = "VetStoreProto";

package vetstore;

message GetVetsRequest {}

message Specialty { string name = 1; }

message Vet {
  uint32 id = 1;
  string first_name = 2;
  string last_name = 3;
  repeated Specialty specialties = 4;
}

message GetVetsResponse { repeated Vet vets = 1; }

service VetsStore {
  rpc GetVets(GetVetsRequest) returns (GetVetsResponse) {}
}
